--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <meta name="description" content="">
 
-
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700"
           rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -34,5 +33,8 @@
     //= template/slider.html
     //= template/main.html
     //= template/creditcard.html
+    //= template/zaimi.html
+    //= template/debit.html
+    //= template/creditsuggestion.html
 </body>
 </html>
