--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,6 @@
     //= template/zaimi.html
     //= template/debit.html
     //= template/creditsuggestion.html
+    //= template/rassrochki.html
 </body>
 </html>
