finished main page without hover in header

--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,7 @@
     //= template/debit.html
     //= template/creditsuggestion.html
     //= template/rassrochki.html
+    //= template/footerText.html
+    //= template/footer.html
 </body>
 </html>
