--- a/src/listing.html
+++ b/src/listing.html
@@ -30,9 +30,7 @@
 
 <body>
 //= template/header.html
-//= template/notfound.html
-//= template/long.html
-<div class="notfound__margin"></div>
+//= template/calculator.html
 //= template/footer.html
 </body>
 </html>
