--- a/src/listing.html
+++ b/src/listing.html
@@ -19,18 +19,28 @@
           rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
           rel="stylesheet">
+
     <script
             defer
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
+
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" defer></script>
     <script  src="js/main.js" defer></script>
 </head>
 
 <body>
-//= template/header.html
-//= template/calculator.html
-//= template/footer.html
+    //= template/header.html
+    //= template/calculator.html
+    <div class="container">
+        <h2 class="listing__h2">Лучшие займы</h2>
+    </div>
+    //= template/sortTab.html
+    //= template/sortBy.html
+    //= template/longListing.html
+    //= template/paginator.html
+    //= template/footerText.html
+    //= template/footer.html
 </body>
 </html>
